fix spacing between menu items

--- a/customer-frontend/src/components/menu/MenuItem.css
+++ b/customer-frontend/src/components/menu/MenuItem.css
@@ -1,5 +1,5 @@
 .menuItemContainer {
-    margin: 10px auto;
+    margin: 0 auto;
     background-color: #2f3133
 }
 
